AC_PREREQ([2.68])
AC_INIT([paradis], , [], [],
 [ssh://gerritforge.lmera.ericsson.se:29418/erlang-ecim-oam-moci])

# Checks for programs.
AC_PROG_MAKE_SET

AC_ERLANG_NEED_ERLC
AC_ERLANG_NEED_ERL

# AC_ERLANG_CHECK_LIB([cocos], [], [AC_MSG_ERROR([cocos not found])])

AC_PATH_PROG(DIALYZER, dialyzer)

AC_PATH_PROG(PDFLATEX, pdflatex)

AC_PATH_PROG(GLURK, glurkit)

# Checks for header files.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
